--- a/src/app/pages/taskdetails/taskdetails.component.html
+++ b/src/app/pages/taskdetails/taskdetails.component.html
@@ -1,6 +1,6 @@
 <div class="container padding">
     <div class="row justify-content-around align-items-center">
-        <div class="col-sm-12 col-md-5 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-6">
             <h1 class="text-secondary"> {{selectedtask.data.title}}</h1>
             <p> {{selectedtask.data.description}}</p>
 
@@ -13,8 +13,8 @@
         </div>
 
 
-        <div class="col-sm-12 col-md-6 col-lg-5">
-            <img src="../../../assets/images/tasks.webp">
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <img src="../../../assets/images/tasks.jpg">
         </div>
     </div>
 </div>
